# whatsapp_general

./: .env.example  .gitignore  Dockerfile  database.py  docker-compose.yml  main.py  pyproject.toml  schemas.py  supabase_data_guide.md  test_app.py  worker.py
.agents/: dados.md
.agents/Skills/eda-agent/: SKILL.md
.agents/Skills/eda-agent/scripts/: template_eda.py
FLOW ANALYZEER/: SKILL.md
FLOW ANALYZEER/n8n-workflows/: INDEX.md  workflow-agenda-reuniao-mindflow.md  workflow-call-analisys-mindflow-disparo.md  workflow-call-analysis-mindflow.md  workflow-disparo-mindflow.md  workflow-formulario-do-site-de-ligacao.md  workflow-formulario.md  workflow-ligacao-whatsapp-mindflow.md  workflow-mcp-ligawhats.md  workflow-mcp.md  workflow-programa-ligacao-mindflow.md  workflow-resultados.md  workflow-retentativa-mindflow-disparo.md  workflow-retentativa-mindflow.md  workflow-sdr-insta-mindflow.md  workflow-sub-mensagens-mindflow.md  workflow-verifica-agenda-mindflow.md  workflow-verifica-dia-da-semana.md  workflow-webhook-ligacao-mindflow-disparo.md  workflow-webhook-ligacao.md  workflow-webhook-ligawhats.md  workflow-z-api.md
docs/: api_reference.md  conventions.md  memory.md  message_buffer.md  server_route.md  workflow.md
services/: agent.py  whatsapp.py
