[tool.poetry]
name = "usefull-skills"
version = "0.1.0"
description = "MindFlow Multi-tenant WhatsApp Workflow"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.0"
supabase = "^2.4.0"
arq = "^0.25.0"
redis = "^5.0.0"
openai = "^1.12.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
